--- a/css/pages.css
+++ b/css/pages.css
@@ -173,7 +173,7 @@ h1 {
         }
 
         p {
-            font-size: 3vw !important;
+            font-size: 4vw !important;
         }
 
         img {
